--- a/pages/2682.html
+++ b/pages/2682.html
@@ -614,7 +614,7 @@ margin-left: 0em;
 
 <p>One widely studied class of modli-stabilized solutions to the string-theory background equations is that of <strong><a class='existingWikiWord' href='/nlab/show/flux+compactification'>flux compactifications</a></strong>.</p>
 
-<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/flux'>fluxes</a></em> .</p>
+<p>These are classical solutions to the corresponding <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> theory that are of the form <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>M</mi> <mn>4</mn></msup><mo>×</mo><mi>CY</mi></mrow><annotation encoding='application/x-tex'>M^4 \times CY</annotation></semantics></math> with <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math> some <a class='existingWikiWord' href='/nlab/show/Calabi-Yau+variety'>Calabi-Yau manifold</a> of six real dimensions such that the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution has nontrivial values on <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>CY</mi></mrow><annotation encoding='application/x-tex'>CY</annotation></semantics></math>. Its components are called the <em><a class='existingWikiWord' href='/nlab/show/flux'>fluxes</a></em> .</p>
 
 <p>The presence of this <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> in the solution induces an effective potential for the scalar moduli fields that parameterize the geometry of CY. Hence by choosing the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a> suitably one can find classical solutions in which all these moduli have values that are constant in time.</p>
 
@@ -834,7 +834,7 @@ margin-left: 0em;
 
 <p>The articles <a href='#LercheLustSchellekens86'>Lerche-Lüst-Schellekens 86</a>, <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a>, and the speech <a href='#Schellekens98'>Schellekens 98</a>, did not cause much of excitement then. Also they did not discuss <a class='existingWikiWord' href='/nlab/show/moduli+stabilization'>moduli stabilization</a>, which could still have been thought to reduce the number of vacua. Excitement was only later caused instead by more vague discussion of flux compactification vacua with moduli stabilization in type IIB string theory:</p>
 
-<p>That there are <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
+<p>That there are <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mi>hundreds</mi></msup></mrow><annotation encoding='application/x-tex'>10^{hundreds}</annotation></semantics></math> different flux compactifications was maybe first said explicitly in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Raphael+Bousso'>Raphael Bousso</a>, <a class='existingWikiWord' href='/nlab/show/Joseph+Polchinski'>Joseph Polchinski</a>, <em>Quantization of Four-form Fluxes and Dynamical Neutralization of the Cosmological Constant</em> (<a href='http://arxiv.org/abs/hep-th/0004134'>arXiv:hep-th/0004134</a>)</li>
@@ -850,7 +850,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Shamit+Kachru'>Shamit Kachru</a>, <a class='existingWikiWord' href='/nlab/show/Renata+Kallosh'>Renata Kallosh</a>, <a class='existingWikiWord' href='/nlab/show/Andrei+Linde'>Andrei Linde</a>, <a class='existingWikiWord' href='/nlab/show/Sandip+Trivedi'>Sandip Trivedi</a>, <em>de Sitter Vacua in String Theory</em>, Phys. Rev. D68:046005, 2003 (<a href='http://arxiv.org/abs/hep-th/0301240'>arXiv:hep-th/0301240</a>)</p>
 
-<p>(“KKLT”, a good quick review is in <a href='#DanielssonVanRiet18'>Danielsson-VanRiet 18 section 2.5.1</a>)</p>
+<p>(“KKLT”, a good quick review is in <a href='#DanielssonVanRiet18'>Danielsson-VanRiet 18 section 2.5.1</a>, also <a href='#IbanezUranga12'>Ibanez-Uranga 12, section 15.3.1</a>)</p>
 </li>
 
 <li>
@@ -858,7 +858,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
+<p>Review includes</p>
+
+<ul>
+<li id='IbanezUranga12'><a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibáñez</a>, <a class='existingWikiWord' href='/nlab/show/%C3%81ngel+Uranga'>Angel Uranga</a>, section 15.3 of <em><a class='existingWikiWord' href='/nlab/show/String+Theory+and+Particle+Physics+--+An+Introduction+to+String+Phenomenology'>String Theory and Particle Physics -- An Introduction to String Phenomenology</a></em>, Cambridge University Press 2012</li>
+</ul>
+
+<p>The specific (but arbitrary) value “<math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math>” for the typical number of flux compactification, which became iconic in public discussion of the issue, originates in</p>
 
 <ul>
 <li id='Douglas04'>
@@ -876,7 +882,7 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Suyay+Ashok'>Suyay Ashok</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Douglas'>Michael Douglas</a>, <em>Counting flux vacua</em>, JHEP, vol. 0401, p. 060, 2004</li>
 </ul>
 
-<p>had considered <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
+<p>had considered <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>120</mn></msup></mrow><annotation encoding='application/x-tex'>10^{120}</annotation></semantics></math> and earlier <a href='#LercheLustSchellekens87'>Lerche-Lüst-Schellekens 87</a> had <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>1500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{1500}</annotation></semantics></math>.</p>
 
 <p>A review of the issue of flux compactifications is in</p>
 
@@ -904,7 +910,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Tom+Banks'>Tom Banks</a>, <em>The Top <math class='maruku-mathml' display='inline' id='mathml_dd18e24792f32a7fb892951f8c3e0dfc5c2ede09_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math> Reasons Not to Believe in the Landscape</em> (<a href='https://arxiv.org/abs/1208.5715'>arXiv:1208.5715</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Tom+Banks'>Tom Banks</a>, <em>The Top <math class='maruku-mathml' display='inline' id='mathml_6de382a2a53cf685316d80144aa3503caaecd1df_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mn>500</mn></msup></mrow><annotation encoding='application/x-tex'>10^{500}</annotation></semantics></math> Reasons Not to Believe in the Landscape</em> (<a href='https://arxiv.org/abs/1208.5715'>arXiv:1208.5715</a>)</p>
 </li>
 
 <li>
@@ -918,14 +924,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April  5, 2018 08:32:30
+  Revised on April  5, 2018 15:50:08
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.90.187)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/32" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(32 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/landscape+of+string+theory+vacua" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/landscape+of+string+theory+vacua/33" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(33 revisions)</span> | <a href="/nlab/show/diff/landscape+of+string+theory+vacua" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/landscape+of+string+theory+vacua" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
 
   <span class="views">
     | Views:
