--- a/pages/673.html
+++ b/pages/673.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://ncatlab.org/nlab/author/David%20Roberts" title="Overview of nLab pages which David Roberts has edited" style="color: black">Pages contributed to</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -331,7 +330,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Smooth loop stacks of differentiable stacks and gerbes</em>, <a href='https://arxiv.org/abs/1602.07973'>arXiv:1602.07973</a>. Accepted 15 January 2018 to appear, <a class='existingWikiWord' href='/nlab/show/Cahiers'>Cahiers de Topologie et Géométrie Différentielle Catégoriques</a>, Vol LIX (2018). Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a>.</p>
+<p><em>Smooth loop stacks of differentiable stacks and gerbes</em>, <a class='existingWikiWord' href='/nlab/show/Cahiers'>Cahiers de Topologie et Géométrie Différentielle Catégoriques</a>, Vol LIX no 2 (2018) pp 95-141 <a href='http://cahierstgdc.com/index.php/volume-lix-2018/'>journal version</a>, <a href='https://arxiv.org/abs/1602.07973'>arXiv:1602.07973</a>. Joint with <a class='existingWikiWord' href='/nlab/show/Raymond+Vozzo'>Raymond Vozzo</a>.</p>
 </li>
 
 <li>
@@ -396,11 +395,11 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_78bff8da8c10de1837c7324936e4c57ef944cebf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
+<p><em>Strict 2-sites, <math class='maruku-mathml' display='inline' id='mathml_74abbe73b8f0e2a764db0445d7416ddeae945e24_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>J</mi></mrow><annotation encoding='application/x-tex'>J</annotation></semantics></math>-spans and localisations</em>.</p>
 </li>
 
 <li>
-<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_78bff8da8c10de1837c7324936e4c57ef944cebf_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
+<p><em>Two rational maps that generate <math class='maruku-mathml' display='inline' id='mathml_74abbe73b8f0e2a764db0445d7416ddeae945e24_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>π</mi> <mn>1</mn> <mi>s</mi></msubsup></mrow><annotation encoding='application/x-tex'>\pi_1^s</annotation></semantics></math></em> (working title)</p>
 </li>
 
 <li>
@@ -514,19 +513,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 13, 2018 00:02:40 
+  Revised on April  7, 2018 04:03:47
   by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (129.127.37.121)
+  (218.215.39.13).
+  See <a href="https://ncatlab.org/nlab/author/David Roberts" style="color: #005c19">Author — David Roberts</a> for an overview of the nLab pages to which David Roberts has contributed.
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/149" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(149 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/David+Roberts" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/David+Roberts/150" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(150 revisions)</span> | <a href="/nlab/show/diff/David+Roberts" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/David+Roberts" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/David+Roberts" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/David+Roberts" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/David+Roberts" id="view_source" rel="nofollow">Source</a>
