--- a/pages/17721.html
+++ b/pages/17721.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,19 +290,14 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8400/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
 </form>  <span id='navEnd'></span>
-</div>
-<div>
-   <p style="font-size: 0.85em; color:red;">Please note that the nLab and nForum will be down for planned maintenance between around 02:00 GMT and 15:00 GMT on the 11th of March. The <a href="https://groups.google.com/forum/#!forum/nlab-talk">nLab talk</a> Google Group can be used for communication during the period of downtime. Apologies for any inconvenience.</p>    
 </div>
 
 
@@ -324,7 +319,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
-<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hypothesis'>hypothesis</a>/<a class='existingWikiWord' href='/nlab/show/context'>context</a>/<a class='existingWikiWord' href='/nlab/show/antecedent'>antecedent</a> <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>conclusion</a>/<a class='existingWikiWord' href='/nlab/show/consequent'>consequence</a>/<a class='existingWikiWord' href='/nlab/show/succedent'>succedent</a></p>
 </li>
 
 <li>
@@ -377,7 +372,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -581,12 +576,12 @@ margin-left: 0em;
 <h2 id='idea'>Idea</h2>
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <em>induction-induction</em> is a principle for mutually defining <a class='existingWikiWord' href='/nlab/show/type'>types</a> of the form</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>and</mi><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>B</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo lspace='verythinmathspace'>:</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>and</mi><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mspace width='thickmathspace'></mspace><mi>B</mi><mo lspace='verythinmathspace'>:</mo><mi>A</mi><mo>→</mo><mi>Type</mi><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
   A \colon Type\,,\;\;\; and \;\;\; B \colon A \to Type
   \,,
 
 </annotation></semantics></math></div>
-<p>where both <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/inductive+type'>defined inductively</a>, such that the constructors for <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> can refer to <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> and vice versa. In addition, the constructor for <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> can refer to the constructor for <math class='maruku-mathml' display='inline' id='mathml_ebdf0a33d22d09aab2b9cd72d9a9a6066eef9955_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</p>
+<p>where both <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/inductive+type'>defined inductively</a>, such that the constructors for <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> can refer to <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> and vice versa. In addition, the constructor for <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi></mrow><annotation encoding='application/x-tex'>B</annotation></semantics></math> can refer to the constructor for <math class='maruku-mathml' display='inline' id='mathml_26f0cee0aaa86e723989e34828fb3b3291acf13c_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math>.</p>
 
 <p>Such induction-induction occurs for instance when formalising <a class='existingWikiWord' href='/nlab/show/dependent+type+theory'>dependent type theory</a> in <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>.</p>
 
@@ -598,7 +593,7 @@ margin-left: 0em;
 
 <h2 id='higher_inductive_inductive_types'>Higher inductive inductive types</h2>
 
-<p>Experiments with higher inductive inductive types are sections 11.3 “Cauchy reals” and section 11.6 “Conway surreals” of the <a href='#HoTTBook'>HoTT book</a>. As they are at the set level, these are instances of quotient inductive-inductive types; see <a href='#QIIT'>QIIT</a>.</p>
+<p>Experiments with higher inductive inductive types are sections 11.3 “Cauchy reals” and section 11.6 “Conway surreals” of the <a href='#HoTTBook'>HoTT book</a>. As they are at the set level, these are instances of quotient inductive-inductive types; see <a href='#QIIT'>QIIT</a>. An experimental syntax for HIITs by <a href='#KaposiKovacs'>Kaposi and Kovacs</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -631,8 +626,8 @@ margin-left: 0em;
 <p>Thorsten Altenkirch, Paolo Capriotti, Gabe Dijkstra, Fredrik Nordvall Forsberg, <em>Quotient inductive-inductive types</em>, <a href='https://arxiv.org/abs/1612.02346'>arXiv</a>, 2016</p>
 </li>
 
-<li>
-<p>1337777.OOO , <em>limit objects depend on morphisms , BUT THIS DEPENDENCE NEED-NOT BE GRAMMATICAL !</em> , <a href='https://github.com/1337777/cartier/blob/master/cartierSolution3.v'>https://github.com/1337777/cartier/blob/master/cartierSolution3.v</a></p>
+<li id='KaposiKovacs'>
+<p>Ambrus Kaposi and András Kovács, <em>A Syntax for Higher Inductive-Inductive Types</em>, <a href='https://akaposi.github.io/hiit.pdf'>PDF</a>, 2018</p>
 </li>
 </ul>
 
@@ -648,19 +643,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  9, 2018 08:50:06 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (116.7.66.32)
+  Revised on April  7, 2018 12:05:58
+  by <a class="existingWikiWord" href="/nlab/show/Bas+Spitters">Bas Spitters</a>
+  (87.57.162.122).
+  See <a href="https://ncatlab.org/nlab/author/Bas Spitters" style="color: #005c19">Author — Bas Spitters</a> for an overview of the nLab pages to which Bas Spitters has contributed.
 </div>
 
 <div class="navigation navfoot">
 
   <a href="/nlab/edit/inductive-inductive+type" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/inductive-inductive+type/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/inductive-inductive+type" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/inductive-inductive+type" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/inductive-inductive+type" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/inductive-inductive+type" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/inductive-inductive+type" id="view_source" rel="nofollow">Source</a>
